JT-7480 Added correct z-index for sticky headers for IE11

--- a/app/assets/stylesheets/pages/_compare-schools.scss
+++ b/app/assets/stylesheets/pages/_compare-schools.scss
@@ -124,7 +124,7 @@ body {
       tbody tr:nth-child(1) td {
         position: sticky;
         top: 96px;
-        z-index: 1;
+        z-index: 2;
         box-shadow: 1px 1px 1px -1px #c1d2d9;
       }
       // resets on IE11 since issues occurs on fixed table headers
