--- a/app/assets/stylesheets/pages/search/_search_page.scss
+++ b/app/assets/stylesheets/pages/search/_search_page.scss
@@ -481,6 +481,7 @@ body {
         thead tr:nth-child(1) th  {
           position: relative;
           top: 0px;
+          z-index: 1;
         }
       }
     }
